# searchflow

./: LICENSE  README.md  gitignore  package-lock.json  package.json
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  generate_icon.py  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
